Report chrome JS errors to the error console again.  Bug 324142, r+sr=jst